# REST-API-DOC-Unittest

./: .env.example  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 891bd1dc724c_user_avatar_confirmed.py  9e5a9a3a2c88_init_contact.py  d6a68fc189d1_init_contact.py  e244607f37c1_table_users.py
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16389  16392  16394  16395  16399  16401  16402  16403  16404  16405  16411  16413  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  (+4 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/conf/: config.py  constants.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: form_reset_password.html  reset_password.html
tests/: conftest.py
tests/repository/: test_contacts.py  test_users.py
tests/routes/: test_auth.py
utils/: cache.py  chahe.py  cors.py  health_checker.py  limiter.py
