[tool.poetry]
name = "rest-api-contacts"
version = "0.1.0"
description = ""
authors = ["SergiyBagmet <134723713+SergiyBagmet@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
uvicorn = "^0.24.0.post1"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
pydantic-settings = "^2.1.0"
fastapi-mail = "^1.4.1"
jinja2 = "^3.1.2"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.37.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.26.0"
aiosqlite = "^0.19.0"

[tool.pytest.ini_options]
testpaths = [
    "tests", "tests/routes",
]
pythonpath = [
   "." ,"src", "main.py",
]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
